--- a/stylesheets/partials/_layout.scss
+++ b/stylesheets/partials/_layout.scss
@@ -11,7 +11,7 @@
   height: 100%;
   width: 100%;
   padding-bottom: 16px;
-  margin-top: $nav-height;
+  margin-top: 8px;
   padding-top: $nav-height;
 
   &:before {
